@@ -2138,8 +2138,7 @@ for <var>i</var> in [1,<var>n_members</var>]:
             <code>nat(src=0.0.0.0)</code>. In this case, when a source port
             collision is detected during the commit, the source port will be
             translated to an ephemeral port. If there is no collision, no SNAT
-            is performed. Note that this is currently only implemented in the
-            Linux kernel datapath.
+            is performed.
           </p>
 
           <p>
