@@ -17,6 +17,9 @@ Post-v2.15.0
        cases, e.g if all PMD threads are running on the same NUMA node.
      * Userspace datapath now supports up to 2^18 meters.
      * Added support for systems with non-contiguous NUMA nodes and core ids.
+     * Added all-zero IP SNAT handling to conntrack. In case of collision,
+       using ct(src=0.0.0.0), the source port will be replaced with another
+       non-colliding port in the ephemeral range (1024, 65535).
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
